# FMFSTLT

./: .gitignore  DATASET_CONSTRUCTION.md  EXACT_REPRODUCTION_REBUILD.md  LICENSE  MODEL_READY_PIPELINE.md  PROGRESS.txt  README.md  export_manifest.csv  hpc_full_reference.md  pyproject.toml  setup.cfg  turbotest.txt
docs/: architecture.md  data_pipeline.md  experiments.md  final_report.tex
experimental_scripts/: README.md  __init__.py  build_stage1_regression_windows.py  build_stage2_stop_labels.py  build_stage2_transformer_dataset.py  plot_pareto_frontier.py  rescore_stage2_thresholds.py  score_stage1_xgboost.py  train_stage1_xgboost.py  train_stage2_transformer.py
fmfstlt/: __init__.py
scripts/: README.md  __init__.py  build_exact_public_bigquery.sh  build_exact_public_shards.py  build_stage1_regression_windows.py  build_stage1_windows_iitd.pbs  build_stage2_stop_labels.py  build_stage2_transformer_dataset.py  compare_foundation_vs_baseline_multi_epsilon.py  compute_exact_public_train_stats.py  evaluate_foundation_prefix_throughput.py  evaluate_v1_hybrid_policy_with_v1_throughput.py  evaluate_v1_prefix_throughput.py  export_exact_public_features.sh  export_exact_public_full_tables.sh  export_exact_public_tables_to_gcs.sh  foundation_model.py  foundation_model_twostage.py  foundation_model_v15.py  foundation_model_v2.py  foundation_model_v3.py  make_stage1_uuid_split.py  materialize_normalized_exact_public_shards.py  plot_pareto_frontier.py  pretrain_foundation_model.py  pretrain_foundation_v3.py  rescore_foundation_early_stop_thresholds.py  score_stage1_xgboost.py  (+17 more)
(+24 files in other folders)
