[metadata]
name = fmfstlt
version = 1.0.0
description = A causal foundation model for throughput prediction and speed-test early termination
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib>=3.7
    numpy>=1.24
    pandas>=1.5
    scikit-learn>=1.2
    torch>=2.1
    tqdm>=4.65
    xgboost>=1.7

[options.packages.find]
include =
    fmfstlt*
    scripts

[options.extras_require]
dev =
    pytest>=7.4
    ruff>=0.4

[options.entry_points]
console_scripts =
    fmfstlt-pretrain = scripts.pretrain_foundation_v3:main
    fmfstlt-train = scripts.train_foundation_twostage:main
    fmfstlt-evaluate = scripts.compare_foundation_vs_baseline_multi_epsilon:main
